Bug 517808: [9][compiler] Implement lookup (module, package, type) based on the 2017-05-25 version of JLS
Change-Id: I705cd408bfe04b0ff9c8a7085a4112c15650f890